@@ -6,6 +6,8 @@ Please, if you make changes in this project, leave some notes, your name  and th
 Trunk
 -----
 
+- Added a test which checks the contents of a small root file. --Kath Rawlins
+
 Dec. 20, 2019 Alex Olivas (aolivas@umd.edu)
 -------------------------------------------
 Combo Release V00-00-00
